--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -168,6 +168,68 @@
     </div>
   </section>
 
+
+<!-- DEPOIMENTOS DE CLIENTES -->
+<section class="py-14 bg-white">
+  <div class="container mx-auto px-4 max-w-5xl">
+    
+    <h2 class="text-3xl md:text-4xl font-extrabold text-center text-emerald-600 mb-10">
+      O que nossos clientes dizem 💬✨
+    </h2>
+
+    <div class="grid md:grid-cols-3 gap-8">
+
+      <!-- Depoimento 1 -->
+      <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft hover:shadow-md transition">
+        <div class="flex items-center gap-4 mb-4">
+          <img src="https://randomuser.me/api/portraits/women/44.jpg" class="w-14 h-14 rounded-full object-cover" alt="">
+          <div>
+            <h4 class="font-bold text-slate-900">Mariana Lopes</h4>
+            <p class="text-sm text-slate-500">Usuária verificada</p>
+          </div>
+        </div>
+        <div class="flex text-yellow-400 mb-3">★★★★★</div>
+        <p class="text-slate-700 leading-relaxed">
+          “Simplesmente amei! A dieta veio perfeita para o meu corpo e as receitas ajudaram MUITO no meu dia a dia. Já eliminei 3kg em 12 dias!”
+        </p>
+      </div>
+
+      <!-- Depoimento 2 -->
+      <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft hover:shadow-md transition">
+        <div class="flex items-center gap-4 mb-4">
+          <img src="https://randomuser.me/api/portraits/men/35.jpg" class="w-14 h-14 rounded-full object-cover" alt="">
+          <div>
+            <h4 class="font-bold text-slate-900">Lucas Fernandes</h4>
+            <p class="text-sm text-slate-500">Usuário verificado</p>
+          </div>
+        </div>
+        <div class="flex text-yellow-400 mb-3">★★★★★</div>
+        <p class="text-slate-700 leading-relaxed">
+          “As receitas são incríveis, fáceis e muito gostosas. Foi o que faltava pra eu seguir firme no plano. Recomendo demais!”
+        </p>
+      </div>
+
+      <!-- Depoimento 3 -->
+      <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft hover:shadow-md transition">
+        <div class="flex items-center gap-4 mb-4">
+          <img src="https://randomuser.me/api/portraits/women/68.jpg" class="w-14 h-14 rounded-full object-cover" alt="">
+          <div>
+            <h4 class="font-bold text-slate-900">Ana Beatriz</h4>
+            <p class="text-sm text-slate-500">Usuária verificada</p>
+          </div>
+        </div>
+        <div class="flex text-yellow-400 mb-3">★★★★★</div>
+        <p class="text-slate-700 leading-relaxed">
+          “Finalmente encontrei algo que funciona pra mim! Plano completo, receitas práticas e suporte rápido. Nota 10!”
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+  
+
   <footer class="py-10 text-center text-sm text-slate-500">
     <p>© <span id="year"></span> Dieta Pronta Online. Todos os direitos reservados.</p>
   </footer>
