--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -169,7 +169,8 @@
   </section>
 
 
-<!-- DEPOIMENTOS DE CLIENTES -->
+
+<!-- DEPOIMENTOS DE CLIENTES (VERSÃO BRASILEIRA) -->
 <section class="py-14 bg-white">
   <div class="container mx-auto px-4 max-w-5xl">
     
@@ -182,37 +183,37 @@
       <!-- Depoimento 1 -->
       <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft hover:shadow-md transition">
         <div class="flex items-center gap-4 mb-4">
-          <img src="https://randomuser.me/api/portraits/women/44.jpg" class="w-14 h-14 rounded-full object-cover" alt="">
+          <img src="https://i.pravatar.cc/150?img=47" class="w-14 h-14 rounded-full object-cover" alt="">
           <div>
-            <h4 class="font-bold text-slate-900">Mariana Lopes</h4>
+            <h4 class="font-bold text-slate-900">Mariana Oliveira</h4>
             <p class="text-sm text-slate-500">Usuária verificada</p>
           </div>
         </div>
         <div class="flex text-yellow-400 mb-3">★★★★★</div>
         <p class="text-slate-700 leading-relaxed">
-          “Simplesmente amei! A dieta veio perfeita para o meu corpo e as receitas ajudaram MUITO no meu dia a dia. Já eliminei 3kg em 12 dias!”
+          “O combo dieta + receitas mudou tudo pra mim! Agora consigo seguir firme e comendo bem. Já estou sentindo diferença no meu corpo!”
         </p>
       </div>
 
       <!-- Depoimento 2 -->
       <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft hover:shadow-md transition">
         <div class="flex items-center gap-4 mb-4">
-          <img src="https://randomuser.me/api/portraits/men/35.jpg" class="w-14 h-14 rounded-full object-cover" alt="">
+          <img src="https://i.pravatar.cc/150?img=55" class="w-14 h-14 rounded-full object-cover" alt="">
           <div>
-            <h4 class="font-bold text-slate-900">Lucas Fernandes</h4>
+            <h4 class="font-bold text-slate-900">Rafael Gomes</h4>
             <p class="text-sm text-slate-500">Usuário verificado</p>
           </div>
         </div>
         <div class="flex text-yellow-400 mb-3">★★★★★</div>
         <p class="text-slate-700 leading-relaxed">
-          “As receitas são incríveis, fáceis e muito gostosas. Foi o que faltava pra eu seguir firme no plano. Recomendo demais!”
+          “As receitas são incríveis! Práticas, rápidas e saborosas. Agora a dieta ficou muito mais fácil de seguir.”
         </p>
       </div>
 
       <!-- Depoimento 3 -->
       <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft hover:shadow-md transition">
         <div class="flex items-center gap-4 mb-4">
-          <img src="https://randomuser.me/api/portraits/women/68.jpg" class="w-14 h-14 rounded-full object-cover" alt="">
+          <img src="https://i.pravatar.cc/150?img=12" class="w-14 h-14 rounded-full object-cover" alt="">
           <div>
             <h4 class="font-bold text-slate-900">Ana Beatriz</h4>
             <p class="text-sm text-slate-500">Usuária verificada</p>
@@ -220,13 +221,44 @@
         </div>
         <div class="flex text-yellow-400 mb-3">★★★★★</div>
         <p class="text-slate-700 leading-relaxed">
-          “Finalmente encontrei algo que funciona pra mim! Plano completo, receitas práticas e suporte rápido. Nota 10!”
+          “Nunca tinha recebido um plano tão completo assim! Amei o cuidado e a personalização. Valeu cada centavo!”
+        </p>
+      </div>
+
+      <!-- Depoimento 4 (Novo) -->
+      <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft hover:shadow-md transition md:col-span-1">
+        <div class="flex items-center gap-4 mb-4">
+          <img src="https://i.pravatar.cc/150?img=32" class="w-14 h-14 rounded-full object-cover" alt="">
+          <div>
+            <h4 class="font-bold text-slate-900">Juliana Santos</h4>
+            <p class="text-sm text-slate-500">Usuária verificada</p>
+          </div>
+        </div>
+        <div class="flex text-yellow-400 mb-3">★★★★★</div>
+        <p class="text-slate-700 leading-relaxed">
+          “As receitas são perfeitas para quem não tem tempo! Fácil de preparar e muito gostosas. Minha rotina ficou muito mais leve.”
+        </p>
+      </div>
+
+      <!-- Depoimento 5 (Novo) -->
+      <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft hover:shadow-md transition md:col-span-1">
+        <div class="flex items-center gap-4 mb-4">
+          <img src="https://i.pravatar.cc/150?img=15" class="w-14 h-14 rounded-full object-cover" alt="">
+          <div>
+            <h4 class="font-bold text-slate-900">Carlos Eduardo</h4>
+            <p class="text-sm text-slate-500">Usuário verificado</p>
+          </div>
+        </div>
+        <div class="flex text-yellow-400 mb-3">★★★★★</div>
+        <p class="text-slate-700 leading-relaxed">
+          “Comecei faz pouco tempo e já estou impressionado! Plano prático, claro, e as receitas me ajudam a não sair da dieta.”
         </p>
       </div>
 
     </div>
   </div>
 </section>
+
 
   
 
